--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
+            <li><a href="recipes/snowflake.html">Butter Snow Flakes</a></li>
         </ul>
     </body>
 </html>
