Finished third recipe!

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
             <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
             <li><a href="recipes/snowflake.html">Butter Snow Flakes</a></li>
+            <li><a href="recipes/pancake.html">Good Old Fashioned Pancakes</a></li>
         </ul>
     </body>
 </html>
